src/test/resources/validation/warning/unknownResourceTable/schema.graphqls
type Query {
    # Dummy query, since the schema insists that there must be at least one.
    i(id: ID): ID! @notGenerated
}

type Mutation {
    editCustomerInput(input: EditInput!): ID!
}

input EditInput @table(name: "UNKNOWN_TABLE") {
    id: ID!
    name: String
}