src/test/resources/error/serviceMethodNotFound/schema.graphqls
type Query {
  # Dummy query, since the schema insists that there must be at least one.
  i(id: ID): ID! @notGenerated
}

type Mutation {
  endrePersonSimple(id0: ID!, id1: ID!): ID! @service(name: "TEST_PERSON")
}
